<resources>
    <string name="app_name">ControlOnAir</string>
    <string name="message_title">Messages</string>
    <string name="search">Rechercher</string>
    <string name="home_page">Vos applications connectées</string>
    <string name="contact_title">Contacts</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="destinataire">Destinataire</string>
    <string name="create_message">message</string>
    <string name="conversation_title">Conversations</string>
    <string name="empty_contacts">Kikou, t\'as pas d\'amis</string>
    <string name="retry">Réessayer</string>
    <string name="empty_conversations">kikou, t\'as pas de messages</string>
    <string name="permissions_rational_message">Nous avons besoin de ces permissions pour le bon fonctionnement de l\'application</string>
    <string name="ok">Ok</string>
    <string name="cancel">Refuser</string>
    <string name="send_data">Synchroniser les données</string>
    <string name="privateKey">Pour vous connecter sur la plateforme web, \n veuillez entrer ce code</string>
    <string name="contact_firebase_url_reference">https://controlonairapp.firebaseio.com/users/%1$s/contacts</string>
    <string name="conversation_firebase_url_reference">https://controlonairapp.firebaseio.com/users/%1$s/conversations</string>
    <string name="message_firebase_url_reference">https://controlonairapp.firebaseio.com/users/%1$s/messages/%2$s</string>
    <string name="to">À :</string>
    <string name="new_message_title">Nouveau message</string>
    <string name="mobile">téléphone</string>
    <string name="modify_contact">modifier</string>
    <string name="delete_contact">supprimer</string>
    <string name="add_contact_title">Ajouter un contact</string>
    <string name="add_contact">Ajouter</string>
    <string name="contact_name">nom :</string>
    <string name="rgpd_title"><b>Règlement général sur la protection des données</b></string>
    <string name="rgpd_text">Pour être accessible sur notre plateforme web, les données de votre téléphone sont enregistrés à chaque synchronisation. Droit de l\'utilisateur sur les données collectées
        L\'utilisateur est en droit comme l\'indique l\'article 16 de la loi RGPD mis en application depuis le 25 mai 2018 de demander un listage exhaustif des données faisant l\'objet d\'un traitement par l\'application ControlOnAir.</string>
    <string name="rgpd_text2">Ce listage peut être demandé à tout moment par un utilisateur connecté à l\'application. L\'application permet également, comme l\'indique l\'article 17 de la RGPD, un droit à l\'effacement / droit à l\'oubli des informations collectées sur l\'utilisateur. Par ce procédé toute information collectée par le biais de l\'utilisation de l\'application peut être détruite à la demande de l\'utilisateur quand il le souhaite.</string>
    <string name="askData">Envoyer</string>
    <string name="desktop">Desktop code</string>
    <string name="email">Email</string>
    <string name="send">envoyer</string>
</resources>
