<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendMessageActivity">

    <include layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <TextView
        android:id="@+id/to"
        android:layout_width="20dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/destinataire"
        />


        <EditText
            android:id="@+id/destinataire"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:hint="@string/destinataire"
            app:layout_constraintLeft_toRightOf="@id/to"
            app:layout_constraintRight_toRightOf="parent"
            />
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:hint="@string/create_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_send_message"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageButton
        android:id="@+id/button_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/send_message"
        android:background="@null"
        android:padding="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edit_text_message"/>

</android.support.constraint.ConstraintLayout>
</LinearLayout>
